2013-12-02  Eli Zaretskii  <eliz@gnu.org>

	Improve reporting of fatal exception on MS-Windows.
	* w32fns.c (my_exception_handler): New function.
	(globals_of_w32fns): Set it up as the unhandled exception
	handler.  Initialize exception code and address to zeros.
	(emacs_abort): If the exception code and address are available,
	print them at the beginning of the backtrace.  Fix the format of
	printing addresses (was producing 0x0x12345678 on XP).
	(Bug#15994)

2013-12-02  Helmut Eller  <eller.helmut@gmail.com>

	* eval.c (Fbacktrace__locals): New function.
	(syms_of_eval): Defsubr it.

2013-12-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* font.h (FONT_WIDTH, FONT_HEIGHT, FONT_BASE, FONT_DESCENT):
	Define here to unify between...
	* nsterm.h, w32term.h, xterm.h: ...port-specific headers.
	* w32term.h (CHECK_W32_FRAME): Remove unused macro.

2013-12-02  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xterm.h (struct scroll_bar): Remove member `fringe_extended_p'.

	* xterm.c (x_draw_fringe_bitmap, x_scroll_run): Remove code for
	fringe background extension.
	(x_scroll_bar_create): Remove variables `sb_left' and `sb_width',
	because they are now always the same as `left' and `width',
	respectively.  Remove code for the case that `width' and
	`sb_width' are different.

2013-12-01  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking.
	* dispextern.h, xdisp.c (x_draw_bottom_divider): Now static.
	* frame.c (set_frame_param) [!HAVE_NTGUI]: Remove.
	* xdisp.c (Ftool_bar_height) [USE_GTK || HAVE_NS]: Now const function.

2013-12-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_compute_animated_image): Don't crash if we
	have an animation with different-sized images (bug#15313).

2013-11-30  Martin Rudalics  <rudalics@gmx.at>

	Remove some unused items introduced during pixelwise change.
	* window.c (window_resize_total_check): Remove unused function.
	* xdisp.c (remember_mouse_glyph): Remove unused label.